build/parser.output
Terminales no usados en la gramática

    TOKEN_DBYTE
    TOKEN_DSHORT
    TOKEN_DLONG


La regla es inútil debido a los conflictos

   26 instruccion: error '}'


Estado 11 conflictos: 1 desplazamiento/reducción
Estado 63 conflictos: 39 reducción/reducción
Estado 99 conflictos: 1 desplazamiento/reducción
Estado 197 conflictos: 76 reducción/reducción
Estado 199 conflictos: 39 reducción/reducción
Estado 261 conflictos: 1 desplazamiento/reducción
Estado 292 conflictos: 1 desplazamiento/reducción


Gramática

    0 $accept: s $end

    1 s: lSentencia

    2 lSentencia: lSentencia instruccion
    3           | lSentencia comentario
    4           | instruccion
    5           | lSentencia error '}'
    6           | error '}'

    7 comentario: TOKEN_COMMENT_LINE
    8           | TOKEN_COMMENT_MULTI

    9 instruccion: if_statement
   10            | switch_statement
   11            | break_statement
   12            | while_statement
   13            | for_statement
   14            | for_each_statement
   15            | imprimir ';'
   16            | bloque
   17            | declaracion_var ';'
   18            | funcion_declaracion
   19            | main_declaracion
   20            | return_stmt ';'
   21            | asignacion ';'
   22            | asignacion_elemento ';'
   23            | postfix ';'
   24            | continue_statement
   25            | error ';'
   26            | error '}'

   27 if_statement: TOKEN_IF '(' expr ')' bloque
   28             | TOKEN_IF '(' expr ')' bloque TOKEN_ELSE bloque
   29             | TOKEN_IF '(' expr ')' bloque TOKEN_ELSE if_statement
   30             | TOKEN_IF '(' expr ')' instruccion_simple ';'
   31             | TOKEN_IF '(' expr ')' instruccion_simple ';' TOKEN_ELSE bloque
   32             | TOKEN_IF '(' expr ')' instruccion_simple ';' TOKEN_ELSE if_statement

   33 switch_statement: TOKEN_SWITCH '(' expr ')' '{' case_list '}'
   34                 | TOKEN_SWITCH '(' expr ')' '{' case_list default_case '}'

   35 while_statement: TOKEN_WHILE '(' expr ')' bloque
   36                | TOKEN_WHILE '(' expr ')' instruccion_simple

   37 for_statement: TOKEN_FOR '(' declaracion_var ';' expr ';' incremento ')' bloque_for
   38              | TOKEN_FOR '(' declaracion_var ';' expr ';' incremento ')' instruccion_simple
   39              | TOKEN_FOR '(' declaracion_var ';' expr ';' ')' bloque_for
   40              | TOKEN_FOR '(' declaracion_var ';' expr ';' ')' instruccion_simple
   41              | TOKEN_FOR '(' asignacion ';' expr ';' incremento ')' bloque
   42              | TOKEN_FOR '(' asignacion ';' expr ';' incremento ')' instruccion_simple

   43 incremento: asignacion
   44           | TOKEN_IDENTIFIER TOKEN_PLUS_PLUS
   45           | TOKEN_IDENTIFIER TOKEN_MINUS_MINUS

   46 case_list: case_item
   47          | case_list case_item

   48 case_labels: TOKEN_CASE expr ':'
   49            | case_labels TOKEN_CASE expr ':'

   50 case_item: case_labels instrucciones_case
   51          | case_labels instrucciones_case TOKEN_BREAK ';'

   52 instrucciones_case: instruccion_case
   53                   | instrucciones_case instruccion_case

   54 instruccion_case: imprimir ';'
   55                 | bloque
   56                 | declaracion_var ';'
   57                 | asignacion ';'

   58 default_case: TOKEN_DEFAULT ':' instrucciones_case
   59             | TOKEN_DEFAULT ':' instrucciones_case TOKEN_BREAK ';'

   60 break_statement: TOKEN_BREAK ';'

   61 continue_statement: TOKEN_CONTINUE ';'

   62 instruccion_simple: imprimir
   63                   | declaracion_var
   64                   | asignacion

   65 asignacion: TOKEN_IDENTIFIER '=' expr
   66           | TOKEN_IDENTIFIER TOKEN_PLUS_ASSIGN expr
   67           | TOKEN_IDENTIFIER TOKEN_MINUS_ASSIGN expr
   68           | TOKEN_IDENTIFIER TOKEN_MUL_ASSIGN expr
   69           | TOKEN_IDENTIFIER TOKEN_DIV_ASSIGN expr
   70           | TOKEN_IDENTIFIER TOKEN_MOD_ASSIGN expr
   71           | TOKEN_IDENTIFIER TOKEN_AND_ASSIGN expr
   72           | TOKEN_IDENTIFIER TOKEN_OR_ASSIGN expr
   73           | TOKEN_IDENTIFIER TOKEN_XOR_ASSIGN expr
   74           | TOKEN_IDENTIFIER TOKEN_SHL_ASSIGN expr
   75           | TOKEN_IDENTIFIER TOKEN_SHR_ASSIGN expr

   76 lista_Expr: lista_Expr ',' expr
   77           | expr

   78 imprimir: TOKEN_PRINT '(' lista_Expr ')'
   79         | TOKEN_SYSTEM_OUT_PRINTLN '(' lista_Expr ')'
   80         | TOKEN_SYSTEM_OUT_PRINTLN '(' ')'
   81         | TOKEN_SYSTEM_OUT_PRINT '(' lista_Expr ')'
   82         | TOKEN_SYSTEM_OUT_PRINT '(' ')'

   83 bloque: '{' lSentencia '}'
   84       | '{' error '}'

   85 bloque_for: '{' lSentencia '}'

   86 declaracion_var: array_decl_local
   87                | var_decl
   88                | final_var_decl

   89 array_decl_local: tipoPrimitivo brackets_seq TOKEN_IDENTIFIER '=' TOKEN_NEW tipoPrimitivo dims_expr_list
   90                 | tipoPrimitivo brackets_seq TOKEN_IDENTIFIER '=' '{' lista_Expr '}'
   91                 | tipoPrimitivo brackets_seq TOKEN_IDENTIFIER '=' bloque2D
   92                 | tipoPrimitivo brackets_seq TOKEN_IDENTIFIER '=' '{' lista_bloques2D '}'
   93                 | tipoPrimitivo brackets_seq TOKEN_IDENTIFIER '=' expr

   94 brackets_seq: '[' ']'
   95             | brackets_seq '[' ']'

   96 var_decl: tipoPrimitivo TOKEN_IDENTIFIER '=' expr
   97         | tipoPrimitivo TOKEN_IDENTIFIER

   98 final_var_decl: TOKEN_FINAL tipoPrimitivo TOKEN_IDENTIFIER '=' expr

   99 dims_expr_list: '[' expr ']'
  100               | dims_expr_list '[' expr ']'

  101 lista_bloques2D: bloque2D
  102                | lista_bloques2D ',' bloque2D

  103 bloque2D: '{' filas_lista '}'

  104 filas_lista: fila_matriz
  105            | filas_lista ',' fila_matriz

  106 fila_matriz: '{' lista_Expr '}'

  107 asignacion_elemento: TOKEN_IDENTIFIER indices_una '=' expr
  108                    | TOKEN_IDENTIFIER indices_multi '=' expr
  109                    | TOKEN_IDENTIFIER indices_una TOKEN_PLUS_ASSIGN expr
  110                    | TOKEN_IDENTIFIER indices_una TOKEN_MINUS_ASSIGN expr
  111                    | TOKEN_IDENTIFIER indices_una TOKEN_MUL_ASSIGN expr
  112                    | TOKEN_IDENTIFIER indices_una TOKEN_DIV_ASSIGN expr
  113                    | TOKEN_IDENTIFIER indices_una TOKEN_MOD_ASSIGN expr
  114                    | TOKEN_IDENTIFIER indices_multi TOKEN_PLUS_ASSIGN expr
  115                    | TOKEN_IDENTIFIER indices_multi TOKEN_MINUS_ASSIGN expr
  116                    | TOKEN_IDENTIFIER indices_multi TOKEN_MUL_ASSIGN expr
  117                    | TOKEN_IDENTIFIER indices_multi TOKEN_DIV_ASSIGN expr
  118                    | TOKEN_IDENTIFIER indices_multi TOKEN_MOD_ASSIGN expr

  119 indices_una: '[' expr ']'

  120 indices_multi: indices_una indices_una
  121              | indices_multi indices_una

  122 expr: expr '+' expr
  123     | expr '-' expr
  124     | expr '*' expr
  125     | expr '/' expr
  126     | expr '%' expr
  127     | expr '&' expr
  128     | expr '|' expr
  129     | expr '^' expr
  130     | expr TOKEN_SHIFT_LEFT expr
  131     | expr TOKEN_SHIFT_RIGHT expr
  132     | expr TOKEN_EQUAL expr
  133     | expr TOKEN_NOT_EQUAL expr
  134     | expr TOKEN_GREATER expr
  135     | expr TOKEN_LESS expr
  136     | expr TOKEN_GREATER_EQUAL expr
  137     | expr TOKEN_LESS_EQUAL expr
  138     | expr TOKEN_AND expr
  139     | expr TOKEN_OR expr
  140     | TOKEN_NOT expr
  141     | '-' expr
  142     | postfix

  143 postfix: unary
  144        | postfix '[' expr ']'
  145        | postfix '.' TOKEN_LENGTH
  146        | postfix '.' TOKEN_ADD '(' expr ')'
  147        | postfix '.' TOKEN_IDENTIFIER '(' expr ')'
  148        | postfix '.' TOKEN_IDENTIFIER '(' ')'
  149        | TOKEN_IDENTIFIER TOKEN_PLUS_PLUS
  150        | TOKEN_IDENTIFIER TOKEN_MINUS_MINUS

  151 unary: atom
  152      | '(' tipoPrimitivo ')' postfix

  153 atom: primitivo
  154     | '(' expr ')'
  155     | TOKEN_IDENTIFIER
  156     | llamada_funcion
  157     | TOKEN_ARRAYS '.' TOKEN_INDEXOF '(' expr ',' expr ')'
  158     | TOKEN_INTEGER_CLASS '.' TOKEN_PARSE_INT '(' expr ')'
  159     | TOKEN_DOUBLE_CLASS '.' TOKEN_PARSE_DOUBLE '(' expr ')'
  160     | TOKEN_FLOAT_CLASS '.' TOKEN_PARSE_FLOAT '(' expr ')'
  161     | TOKEN_DSTRING '.' TOKEN_VALUE_OF '(' expr ')'
  162     | TOKEN_DSTRING '.' TOKEN_JOIN '(' expr ',' expr ')'
  163     | TOKEN_DSTRING '.' TOKEN_JOIN '(' expr ',' join_variadic_args ')'

  164 join_variadic_args: expr ',' lista_Expr

  165 primitivo: TOKEN_UNSIGNED_INTEGER
  166          | TOKEN_STRING
  167          | TOKEN_REAL_FLOAT
  168          | TOKEN_REAL
  169          | TOKEN_CHAR_LITERAL
  170          | TOKEN_TRUE
  171          | TOKEN_FALSE
  172          | TOKEN_NULL

  173 tipoPrimitivo: TOKEN_DINT
  174              | TOKEN_DFLOAT
  175              | TOKEN_DDOUBLE
  176              | TOKEN_DSTRING
  177              | TOKEN_DBOOLEAN
  178              | TOKEN_DCHAR
  179              | TOKEN_DVOID

  180 funcion_declaracion: tipoPrimitivo TOKEN_IDENTIFIER '(' param_opt ')' bloque
  181                    | tipoPrimitivo brackets_seq TOKEN_IDENTIFIER '(' param_opt ')' bloque

  182 main_declaracion: TOKEN_PUBLIC TOKEN_STATIC TOKEN_DVOID TOKEN_IDENTIFIER '(' main_params_opt ')' bloque

  183 main_params_opt: ε
  184                | main_params

  185 main_params: main_param
  186            | main_params ',' main_param

  187 main_param: tipoPrimitivo main_param_array_brackets TOKEN_IDENTIFIER

  188 main_param_array_brackets: ε
  189                          | main_param_array_brackets '[' ']'

  190 param_opt: ε
  191          | lista_parametros

  192 param_array_brackets: ε
  193                     | param_array_brackets '[' ']'

  194 lista_parametros: tipoPrimitivo param_array_brackets TOKEN_IDENTIFIER
  195                 | lista_parametros ',' tipoPrimitivo param_array_brackets TOKEN_IDENTIFIER

  196 return_stmt: TOKEN_RETURN
  197            | TOKEN_RETURN expr

  198 for_each_statement: TOKEN_FOR '(' tipoPrimitivo TOKEN_IDENTIFIER ':' TOKEN_IDENTIFIER ')' bloque
  199                   | TOKEN_FOR '(' tipoPrimitivo '[' ']' TOKEN_IDENTIFIER ':' TOKEN_IDENTIFIER ')' bloque

  200 argumentos_opt: ε
  201               | lista_Expr

  202 llamada_funcion: TOKEN_IDENTIFIER '(' argumentos_opt ')'


Terminales con las reglas donde aparecen

    $end (0) 0
    '%' (37) 126
    '&' (38) 127
    '(' (40) 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 78 79 80 81 82 146 147 148 152 154 157 158 159 160 161 162 163 180 181 182 198 199 202
    ')' (41) 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 78 79 80 81 82 146 147 148 152 154 157 158 159 160 161 162 163 180 181 182 198 199 202
    '*' (42) 124
    '+' (43) 122
    ',' (44) 76 102 105 157 162 163 164 186 195
    '-' (45) 123 141
    '.' (46) 145 146 147 148 157 158 159 160 161 162 163
    '/' (47) 125
    ':' (58) 48 49 58 59 198 199
    ';' (59) 15 17 20 21 22 23 25 30 31 32 37 38 39 40 41 42 51 54 56 57 59 60 61
    '=' (61) 65 89 90 91 92 93 96 98 107 108
    '[' (91) 94 95 99 100 119 144 189 193 199
    ']' (93) 94 95 99 100 119 144 189 193 199
    '^' (94) 129
    '{' (123) 33 34 83 84 85 90 92 103 106
    '|' (124) 128
    '}' (125) 5 6 26 33 34 83 84 85 90 92 103 106
    error (256) 5 6 25 26 84
    TOKEN_PRINT <string> (258) 78
    TOKEN_DINT <string> (259) 173
    TOKEN_DFLOAT <string> (260) 174
    TOKEN_DBYTE <string> (261)
    TOKEN_DSHORT <string> (262)
    TOKEN_DLONG <string> (263)
    TOKEN_DDOUBLE <string> (264) 175
    TOKEN_DSTRING <string> (265) 161 162 163 176
    TOKEN_UNSIGNED_INTEGER <string> (266) 165
    TOKEN_REAL <string> (267) 168
    TOKEN_REAL_FLOAT <string> (268) 167
    TOKEN_STRING <string> (269) 166
    TOKEN_IDENTIFIER <string> (270) 44 45 65 66 67 68 69 70 71 72 73 74 75 89 90 91 92 93 96 97 98 107 108 109 110 111 112 113 114 115 116 117 118 147 148 149 150 155 180 181 182 187 194 195 198 199 202
    TOKEN_TRUE <string> (271) 170
    TOKEN_FALSE <string> (272) 171
    TOKEN_DBOOLEAN <string> (273) 177
    TOKEN_DCHAR <string> (274) 178
    TOKEN_CHAR_LITERAL <string> (275) 169
    TOKEN_FINAL <string> (276) 98
    TOKEN_SYSTEM_OUT_PRINTLN <string> (277) 79 80
    TOKEN_SYSTEM_OUT_PRINT <string> (278) 81 82
    TOKEN_DVOID <string> (279) 179 182
    TOKEN_COMMENT_LINE <string> (280) 7
    TOKEN_COMMENT_MULTI <string> (281) 8
    TOKEN_NULL (282) 172
    TOKEN_SHIFT_LEFT (283) 130
    TOKEN_SHIFT_RIGHT (284) 131
    TOKEN_INTEGER_CLASS (285) 158
    TOKEN_DOUBLE_CLASS (286) 159
    TOKEN_FLOAT_CLASS (287) 160
    TOKEN_ARRAYS (288) 157
    TOKEN_PARSE_INT (289) 158
    TOKEN_PARSE_DOUBLE (290) 159
    TOKEN_PARSE_FLOAT (291) 160
    TOKEN_VALUE_OF (292) 161
    TOKEN_JOIN (293) 162 163
    TOKEN_LENGTH (294) 145
    TOKEN_ADD (295) 146
    TOKEN_INDEXOF (296) 157
    TOKEN_PLUS_PLUS (297) 44 149
    TOKEN_MINUS_MINUS (298) 45 150
    TOKEN_PLUS_ASSIGN (299) 66 109 114
    TOKEN_MINUS_ASSIGN (300) 67 110 115
    TOKEN_MUL_ASSIGN (301) 68 111 116
    TOKEN_DIV_ASSIGN (302) 69 112 117
    TOKEN_MOD_ASSIGN (303) 70 113 118
    TOKEN_AND_ASSIGN (304) 71
    TOKEN_OR_ASSIGN (305) 72
    TOKEN_XOR_ASSIGN (306) 73
    TOKEN_SHL_ASSIGN (307) 74
    TOKEN_SHR_ASSIGN (308) 75
    TOKEN_EQUAL (309) 132
    TOKEN_NOT_EQUAL (310) 133
    TOKEN_GREATER (311) 134
    TOKEN_LESS (312) 135
    TOKEN_GREATER_EQUAL (313) 136
    TOKEN_LESS_EQUAL (314) 137
    TOKEN_AND (315) 138
    TOKEN_OR (316) 139
    TOKEN_NOT (317) 140
    TOKEN_IF (318) 27 28 29 30 31 32
    TOKEN_ELSE (319) 28 29 31 32
    TOKEN_SWITCH (320) 33 34
    TOKEN_CASE (321) 48 49
    TOKEN_DEFAULT (322) 58 59
    TOKEN_BREAK (323) 51 59 60
    TOKEN_WHILE (324) 35 36
    TOKEN_FOR (325) 37 38 39 40 41 42 198 199
    TOKEN_CONTINUE (326) 61
    TOKEN_NEW (327) 89
    TOKEN_RETURN (328) 196 197
    TOKEN_PUBLIC (329) 182
    TOKEN_STATIC (330) 182
    NEG (331)
    CAST (332)


No terminales con las reglas donde aparecen

    $accept (97)
        on left: 0
    s <nodo> (98)
        on left: 1
        on right: 0
    lSentencia <nodo> (99)
        on left: 2 3 4 5 6
        on right: 1 2 3 5 83 85
    comentario (100)
        on left: 7 8
        on right: 3
    instruccion <nodo> (101)
        on left: 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26
        on right: 2 4
    if_statement <nodo> (102)
        on left: 27 28 29 30 31 32
        on right: 9 29 32
    switch_statement <nodo> (103)
        on left: 33 34
        on right: 10
    while_statement <nodo> (104)
        on left: 35 36
        on right: 12
    for_statement <nodo> (105)
        on left: 37 38 39 40 41 42
        on right: 13
    incremento <nodo> (106)
        on left: 43 44 45
        on right: 37 38 41 42
    case_list <nodo> (107)
        on left: 46 47
        on right: 33 34 47
    case_labels <nodo> (108)
        on left: 48 49
        on right: 49 50 51
    case_item <nodo> (109)
        on left: 50 51
        on right: 46 47
    instrucciones_case <nodo> (110)
        on left: 52 53
        on right: 50 51 53 58 59
    instruccion_case <nodo> (111)
        on left: 54 55 56 57
        on right: 52 53
    default_case <nodo> (112)
        on left: 58 59
        on right: 34
    break_statement <nodo> (113)
        on left: 60
        on right: 11
    continue_statement <nodo> (114)
        on left: 61
        on right: 24
    instruccion_simple <nodo> (115)
        on left: 62 63 64
        on right: 30 31 32 36 38 40 42
    asignacion <nodo> (116)
        on left: 65 66 67 68 69 70 71 72 73 74 75
        on right: 21 41 42 43 57 64
    lista_Expr <nodo> (117)
        on left: 76 77
        on right: 76 78 79 81 90 106 164 201
    imprimir <nodo> (118)
        on left: 78 79 80 81 82
        on right: 15 54 62
    bloque <nodo> (119)
        on left: 83 84
        on right: 16 27 28 29 31 35 41 55 180 181 182 198 199
    bloque_for <nodo> (120)
        on left: 85
        on right: 37 39
    declaracion_var <nodo> (121)
        on left: 86 87 88
        on right: 17 37 38 39 40 56 63
    array_decl_local <nodo> (122)
        on left: 89 90 91 92 93
        on right: 86
    brackets_seq <boolean> (123)
        on left: 94 95
        on right: 89 90 91 92 93 95 181
    var_decl <nodo> (124)
        on left: 96 97
        on right: 87
    final_var_decl <nodo> (125)
        on left: 98
        on right: 88
    dims_expr_list <nodo> (126)
        on left: 99 100
        on right: 89 100
    lista_bloques2D <nodo> (127)
        on left: 101 102
        on right: 92 102
    bloque2D <nodo> (128)
        on left: 103
        on right: 91 101 102
    filas_lista <nodo> (129)
        on left: 104 105
        on right: 103 105
    fila_matriz <nodo> (130)
        on left: 106
        on right: 104 105
    asignacion_elemento <nodo> (131)
        on left: 107 108 109 110 111 112 113 114 115 116 117 118
        on right: 22
    indices_una <nodo> (132)
        on left: 119
        on right: 107 109 110 111 112 113 120 121
    indices_multi <nodo> (133)
        on left: 120 121
        on right: 108 114 115 116 117 118 121
    expr <nodo> (134)
        on left: 122 123 124 125 126 127 128 129 130 131 132 133 134 135 136 137 138 139 140 141 142
        on right: 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 48 49 65 66 67 68 69 70 71 72 73 74 75 76 77 93 96 98 99 100 107 108 109 110 111 112 113 114 115 116 117 118 119 122 123 124 125 126 127 128 129 130 131 132 133 134 135 136 137 138 139 140 141 144 146 147 154 157 158 159 160 161 162 163 164 197
    postfix <nodo> (135)
        on left: 143 144 145 146 147 148 149 150
        on right: 23 142 144 145 146 147 148 152
    unary <nodo> (136)
        on left: 151 152
        on right: 143
    atom <nodo> (137)
        on left: 153 154 155 156 157 158 159 160 161 162 163
        on right: 151
    join_variadic_args <nodo> (138)
        on left: 164
        on right: 163
    primitivo <nodo> (139)
        on left: 165 166 167 168 169 170 171 172
        on right: 153
    tipoPrimitivo <tipoDato> (140)
        on left: 173 174 175 176 177 178 179
        on right: 89 90 91 92 93 96 97 98 152 180 181 187 194 195 198 199
    funcion_declaracion <nodo> (141)
        on left: 180 181
        on right: 18
    main_declaracion <nodo> (142)
        on left: 182
        on right: 19
    main_params_opt (143)
        on left: 183 184
        on right: 182
    main_params (144)
        on left: 185 186
        on right: 184 186
    main_param (145)
        on left: 187
        on right: 185 186
    main_param_array_brackets (146)
        on left: 188 189
        on right: 187 189
    param_opt <paramList> (147)
        on left: 190 191
        on right: 180 181
    param_array_brackets <boolean> (148)
        on left: 192 193
        on right: 193 194 195
    lista_parametros <paramList> (149)
        on left: 194 195
        on right: 191 195
    return_stmt <nodo> (150)
        on left: 196 197
        on right: 20
    for_each_statement <nodo> (151)
        on left: 198 199
        on right: 14
    argumentos_opt <nodo> (152)
        on left: 200 201
        on right: 202
    llamada_funcion <nodo> (153)
        on left: 202
        on right: 156


Estado 0

    0 $accept: • s $end

    error                     desplazar e ir al estado 1
    TOKEN_PRINT               desplazar e ir al estado 2
    TOKEN_DINT                desplazar e ir al estado 3
    TOKEN_DFLOAT              desplazar e ir al estado 4
    TOKEN_DDOUBLE             desplazar e ir al estado 5
    TOKEN_DSTRING             desplazar e ir al estado 6
    TOKEN_UNSIGNED_INTEGER    desplazar e ir al estado 7
    TOKEN_REAL                desplazar e ir al estado 8
    TOKEN_REAL_FLOAT          desplazar e ir al estado 9
    TOKEN_STRING              desplazar e ir al estado 10
    TOKEN_IDENTIFIER          desplazar e ir al estado 11
    TOKEN_TRUE                desplazar e ir al estado 12
    TOKEN_FALSE               desplazar e ir al estado 13
    TOKEN_DBOOLEAN            desplazar e ir al estado 14
    TOKEN_DCHAR               desplazar e ir al estado 15
    TOKEN_CHAR_LITERAL        desplazar e ir al estado 16
    TOKEN_FINAL               desplazar e ir al estado 17
    TOKEN_SYSTEM_OUT_PRINTLN  desplazar e ir al estado 18
    TOKEN_SYSTEM_OUT_PRINT    desplazar e ir al estado 19
    TOKEN_DVOID               desplazar e ir al estado 20
    TOKEN_NULL                desplazar e ir al estado 21
    TOKEN_INTEGER_CLASS       desplazar e ir al estado 22
    TOKEN_DOUBLE_CLASS        desplazar e ir al estado 23
    TOKEN_FLOAT_CLASS         desplazar e ir al estado 24
    TOKEN_ARRAYS              desplazar e ir al estado 25
    TOKEN_IF                  desplazar e ir al estado 26
    TOKEN_SWITCH              desplazar e ir al estado 27
    TOKEN_BREAK               desplazar e ir al estado 28
    TOKEN_WHILE               desplazar e ir al estado 29
    TOKEN_FOR                 desplazar e ir al estado 30
    TOKEN_CONTINUE            desplazar e ir al estado 31
    TOKEN_RETURN              desplazar e ir al estado 32
    TOKEN_PUBLIC              desplazar e ir al estado 33
    '('                       desplazar e ir al estado 34
    '{'                       desplazar e ir al estado 35

    s                    ir al estado 36
    lSentencia           ir al estado 37
    instruccion          ir al estado 38
    if_statement         ir al estado 39
    switch_statement     ir al estado 40
    while_statement      ir al estado 41
    for_statement        ir al estado 42
    break_statement      ir al estado 43
    continue_statement   ir al estado 44
    asignacion           ir al estado 45
    imprimir             ir al estado 46
    bloque               ir al estado 47
    declaracion_var      ir al estado 48
    array_decl_local     ir al estado 49
    var_decl             ir al estado 50
    final_var_decl       ir al estado 51
    asignacion_elemento  ir al estado 52
    postfix              ir al estado 53
    unary                ir al estado 54
    atom                 ir al estado 55
    primitivo            ir al estado 56
    tipoPrimitivo        ir al estado 57
    funcion_declaracion  ir al estado 58
    main_declaracion     ir al estado 59
    return_stmt          ir al estado 60
    for_each_statement   ir al estado 61
    llamada_funcion      ir al estado 62


Estado 1

    6 lSentencia: error • '}'
   25 instruccion: error • ';'
   26            | error • '}'

    '}'  desplazar e ir al estado 63
    ';'  desplazar e ir al estado 64


Estado 2

   78 imprimir: TOKEN_PRINT • '(' lista_Expr ')'

    '('  desplazar e ir al estado 65


Estado 3

  173 tipoPrimitivo: TOKEN_DINT •

    $default  reduce usando la regla 173 (tipoPrimitivo)


Estado 4

  174 tipoPrimitivo: TOKEN_DFLOAT •

    $default  reduce usando la regla 174 (tipoPrimitivo)


Estado 5

  175 tipoPrimitivo: TOKEN_DDOUBLE •

    $default  reduce usando la regla 175 (tipoPrimitivo)


Estado 6

  161 atom: TOKEN_DSTRING • '.' TOKEN_VALUE_OF '(' expr ')'
  162     | TOKEN_DSTRING • '.' TOKEN_JOIN '(' expr ',' expr ')'
  163     | TOKEN_DSTRING • '.' TOKEN_JOIN '(' expr ',' join_variadic_args ')'
  176 tipoPrimitivo: TOKEN_DSTRING •

    '.'  desplazar e ir al estado 66

    $default  reduce usando la regla 176 (tipoPrimitivo)


Estado 7

  165 primitivo: TOKEN_UNSIGNED_INTEGER •

    $default  reduce usando la regla 165 (primitivo)


Estado 8

  168 primitivo: TOKEN_REAL •

    $default  reduce usando la regla 168 (primitivo)


Estado 9

  167 primitivo: TOKEN_REAL_FLOAT •

    $default  reduce usando la regla 167 (primitivo)


Estado 10

  166 primitivo: TOKEN_STRING •

    $default  reduce usando la regla 166 (primitivo)


Estado 11

   65 asignacion: TOKEN_IDENTIFIER • '=' expr
   66           | TOKEN_IDENTIFIER • TOKEN_PLUS_ASSIGN expr
   67           | TOKEN_IDENTIFIER • TOKEN_MINUS_ASSIGN expr
   68           | TOKEN_IDENTIFIER • TOKEN_MUL_ASSIGN expr
   69           | TOKEN_IDENTIFIER • TOKEN_DIV_ASSIGN expr
   70           | TOKEN_IDENTIFIER • TOKEN_MOD_ASSIGN expr
   71           | TOKEN_IDENTIFIER • TOKEN_AND_ASSIGN expr
   72           | TOKEN_IDENTIFIER • TOKEN_OR_ASSIGN expr
   73           | TOKEN_IDENTIFIER • TOKEN_XOR_ASSIGN expr
   74           | TOKEN_IDENTIFIER • TOKEN_SHL_ASSIGN expr
   75           | TOKEN_IDENTIFIER • TOKEN_SHR_ASSIGN expr
  107 asignacion_elemento: TOKEN_IDENTIFIER • indices_una '=' expr
  108                    | TOKEN_IDENTIFIER • indices_multi '=' expr
  109                    | TOKEN_IDENTIFIER • indices_una TOKEN_PLUS_ASSIGN expr
  110                    | TOKEN_IDENTIFIER • indices_una TOKEN_MINUS_ASSIGN expr
  111                    | TOKEN_IDENTIFIER • indices_una TOKEN_MUL_ASSIGN expr
  112                    | TOKEN_IDENTIFIER • indices_una TOKEN_DIV_ASSIGN expr
  113                    | TOKEN_IDENTIFIER • indices_una TOKEN_MOD_ASSIGN expr
  114                    | TOKEN_IDENTIFIER • indices_multi TOKEN_PLUS_ASSIGN expr
  115                    | TOKEN_IDENTIFIER • indices_multi TOKEN_MINUS_ASSIGN expr
  116                    | TOKEN_IDENTIFIER • indices_multi TOKEN_MUL_ASSIGN expr
  117                    | TOKEN_IDENTIFIER • indices_multi TOKEN_DIV_ASSIGN expr
  118                    | TOKEN_IDENTIFIER • indices_multi TOKEN_MOD_ASSIGN expr
  149 postfix: TOKEN_IDENTIFIER • TOKEN_PLUS_PLUS
  150        | TOKEN_IDENTIFIER • TOKEN_MINUS_MINUS
  155 atom: TOKEN_IDENTIFIER •
  202 llamada_funcion: TOKEN_IDENTIFIER • '(' argumentos_opt ')'

    TOKEN_PLUS_PLUS     desplazar e ir al estado 67
    TOKEN_MINUS_MINUS   desplazar e ir al estado 68
    TOKEN_PLUS_ASSIGN   desplazar e ir al estado 69
    TOKEN_MINUS_ASSIGN  desplazar e ir al estado 70
    TOKEN_MUL_ASSIGN    desplazar e ir al estado 71
    TOKEN_DIV_ASSIGN    desplazar e ir al estado 72
    TOKEN_MOD_ASSIGN    desplazar e ir al estado 73
    TOKEN_AND_ASSIGN    desplazar e ir al estado 74
    TOKEN_OR_ASSIGN     desplazar e ir al estado 75
    TOKEN_XOR_ASSIGN    desplazar e ir al estado 76
    TOKEN_SHL_ASSIGN    desplazar e ir al estado 77
    TOKEN_SHR_ASSIGN    desplazar e ir al estado 78
    '('                 desplazar e ir al estado 79
    '='                 desplazar e ir al estado 80
    '['                 desplazar e ir al estado 81

    '['       [reduce usando la regla 155 (atom)]
    $default  reduce usando la regla 155 (atom)

    indices_una    ir al estado 82
    indices_multi  ir al estado 83


Estado 12

  170 primitivo: TOKEN_TRUE •

    $default  reduce usando la regla 170 (primitivo)


Estado 13

  171 primitivo: TOKEN_FALSE •

    $default  reduce usando la regla 171 (primitivo)


Estado 14

  177 tipoPrimitivo: TOKEN_DBOOLEAN •

    $default  reduce usando la regla 177 (tipoPrimitivo)


Estado 15

  178 tipoPrimitivo: TOKEN_DCHAR •

    $default  reduce usando la regla 178 (tipoPrimitivo)


Estado 16

  169 primitivo: TOKEN_CHAR_LITERAL •

    $default  reduce usando la regla 169 (primitivo)


Estado 17

   98 final_var_decl: TOKEN_FINAL • tipoPrimitivo TOKEN_IDENTIFIER '=' expr

    TOKEN_DINT      desplazar e ir al estado 3
    TOKEN_DFLOAT    desplazar e ir al estado 4
    TOKEN_DDOUBLE   desplazar e ir al estado 5
    TOKEN_DSTRING   desplazar e ir al estado 84
    TOKEN_DBOOLEAN  desplazar e ir al estado 14
    TOKEN_DCHAR     desplazar e ir al estado 15
    TOKEN_DVOID     desplazar e ir al estado 20

    tipoPrimitivo  ir al estado 85


Estado 18

   79 imprimir: TOKEN_SYSTEM_OUT_PRINTLN • '(' lista_Expr ')'
   80         | TOKEN_SYSTEM_OUT_PRINTLN • '(' ')'

    '('  desplazar e ir al estado 86


Estado 19

   81 imprimir: TOKEN_SYSTEM_OUT_PRINT • '(' lista_Expr ')'
   82         | TOKEN_SYSTEM_OUT_PRINT • '(' ')'

    '('  desplazar e ir al estado 87


Estado 20

  179 tipoPrimitivo: TOKEN_DVOID •

    $default  reduce usando la regla 179 (tipoPrimitivo)


Estado 21

  172 primitivo: TOKEN_NULL •

    $default  reduce usando la regla 172 (primitivo)


Estado 22

  158 atom: TOKEN_INTEGER_CLASS • '.' TOKEN_PARSE_INT '(' expr ')'

    '.'  desplazar e ir al estado 88


Estado 23

  159 atom: TOKEN_DOUBLE_CLASS • '.' TOKEN_PARSE_DOUBLE '(' expr ')'

    '.'  desplazar e ir al estado 89


Estado 24

  160 atom: TOKEN_FLOAT_CLASS • '.' TOKEN_PARSE_FLOAT '(' expr ')'

    '.'  desplazar e ir al estado 90


Estado 25

  157 atom: TOKEN_ARRAYS • '.' TOKEN_INDEXOF '(' expr ',' expr ')'

    '.'  desplazar e ir al estado 91


Estado 26
